force-app/main/default/objects/Account/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <description>Auto-update from SAP</description>
    <inlineHelpText>Designation that indicates business relationship of entity with Illumina; determines role account will play in transactions and customer account type in master data.</inlineHelpText>
    <label>Account Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Group</valueSetName>
    </valueSet>
</CustomField>