force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Indicates if address has been verified in master data</description>
    <inlineHelpText>Indicates if address has been verified in master data.</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
                <default>true</default>
                <label>Unverified</label>
            </value>
            <value>
                <fullName>Prospect Validation</fullName>
            </value>
            <value>
                <fullName>Active Prospect</fullName>
            </value>
            <value>
                <fullName>Pending Upgrade</fullName>
            </value>
            <value>
                <fullName>Pending Validation</fullName>
            </value>
            <value>
                <fullName>Pending Obsolete</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>