force-app/main/default/objects/Account/fields/Active_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Active_Account_Plan__c</fullName>
    <description>Field to store active account plan id</description>
    <label>Active Account Plan</label>
    <length>18</length>
    <type>Text</type>
</CustomField>