force-app/main/default/objects/Account/fields/Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Status__c</fullName>
    <description>Indicates if address has been verified in address doctor</description>
    <inlineHelpText>Indicates if address has been verified in master data.</inlineHelpText>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>