force-app/main/default/objects/Account/fields/Aligned_Territories__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Territories__c</fullName>
    <description>All aligned territories. Updated by batch, triggers apex sharing when changed.</description>
    <label>Aligned Territories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>