force-app/main/default/objects/Account/fields/By_Pass_Duplicate_Rules__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Duplicate_Rules__c</fullName>
    <description>Flag to enable/disable duplicate rule validation</description>
    <formula>$Permission.Account_ByPass_Duplicate_Rule</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>By Pass Duplicate Rules</label>
    <type>Checkbox</type>
</CustomField>