force-app/main/default/objects/Account/fields/Care_Of__c.field-meta.xml
<CustomField>
    <fullName>Care_Of__c</fullName>
    <description>As part of 7729, to capture Care Of value.</description>
    <label>Care Of</label>
    <length>40</length>
    <type>Text</type>
</CustomField>