force-app/main/default/objects/Account/fields/Care_Of_Local__c.field-meta.xml
<CustomField>
    <fullName>Care_Of_Local__c</fullName>
    <description>As part of 7729, to capture Care Of (Local) value.</description>
    <label>Care Of (Local)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>