force-app/main/default/objects/Account/fields/Channel_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Type__c</fullName>
    <description>This field should flow from CMD to Sales Order</description>
    <inlineHelpText>Indicates nature of partner&apos;s business; drives account segmentation for Indirect Partners</inlineHelpText>
    <label>Channel Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_Partner_Type</valueSetName>
    </valueSet>
</CustomField>