force-app/main/default/objects/Account/fields/Clinical_Oncology_Screening_Dx_Testing__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Oncology_Screening_Dx_Testing__c</fullName>
    <description>Check if the customer perform screening/diagnostic tests in clinical oncology</description>
    <inlineHelpText>Does the company (or account) use or will in the near future use Illumina sequencing products to perform screening or diagnostic tests in clinical oncology (on human samples), or manufacture kits for such screening/testing?</inlineHelpText>
    <label>Clinical Oncology Screening/Dx Testing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Categorical_Value</valueSetName>
    </valueSet>
</CustomField>