force-app/main/default/objects/Account/fields/Clinical_Type__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Type__c</fullName>
    <description>When applicable, indicates nature of entity and work within the clinical space, used for segmentation</description>
    <inlineHelpText>Indicates the account's work within the clinical space; values are region specific and used for segmentation.  Terms and regional use:  "Clinical" (All); "Non Clinical" (All); "Healthcare Prime" (AMR); "IVD Partner" (GC); "Platform Distributor" (GC).</inlineHelpText>
    <label>Clinical Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clinical_Type</valueSetName>
    </valueSet>
</CustomField>