force-app/main/default/objects/Account/fields/Country_Local__c.field-meta.xml
<CustomField>
    <fullName>Country_Local__c</fullName>
    <description>Local Address Country Information as part of DCP-760</description>
    <inlineHelpText>Address country in local language.</inlineHelpText>
    <label>Country (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>