force-app/main/default/objects/Account/fields/Credit_Block__c.field-meta.xml
<CustomField>
    <fullName>Credit_Block__c</fullName>
    <description>Field to indicate if the account is marked for credit block and suspend it</description>
    <label>Credit Block</label>
    <length>25</length>
    <type>Text</type>
</CustomField>