force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Defines nature of entity and enterprise, utilized for segmentation</description>
    <inlineHelpText>Defines nature of entity&apos;s enterprise; utilized for segmentation.</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Type</valueSetName>
    </valueSet>
</CustomField>