force-app/main/default/objects/Account/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Field to indicate District of Territory associated to Account</description>
    <inlineHelpText>Indicates territory rollup.</inlineHelpText>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>