force-app/main/default/objects/Account/fields/Eligible_To_Estimate_Consumable_Spend__c.field-meta.xml
<CustomField>
    <fullName>Eligible_To_Estimate_Consumable_Spend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Customer is eligible to estimate their Sequencing Consumable Spend for their first Contract Year under the Open Offer Supply Agreement</description>
    <inlineHelpText>Indicates that Customer is eligible to estimate their Sequencing Consumable Spend for their first Contract Year under the Open Offer Supply Agreement</inlineHelpText>
    <label>Eligible To Estimate Consumable Spend</label>
    <type>Checkbox</type>
</CustomField>