force-app/main/default/objects/Account/fields/Enable_Web_Quoting__c.field-meta.xml
<CustomField>
    <fullName>Enable_Web_Quoting__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>If the user has access to MyIllumina and has purchasing capabilities, the Enable Web Quoting field allows Customers to self-generate CPQ Quotes on MyIllumina.</description>
    <inlineHelpText>If the user has access to MyIllumina and has purchasing capabilities, the Enable Web Quoting field being set to YES will make the account eligible for online quoting in MyIllumina.</inlineHelpText>
    <label>Enable Web Quoting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>