force-app/main/default/objects/Account/fields/ERP_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_Id__c</fullName>
    <description>External ID mapped from SAP</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique SAP Customer #</inlineHelpText>
    <label>ERP Customer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>