force-app/main/default/objects/Account/fields/ETM_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>ETM_Record_Type_Id__c</fullName>
    <description>This is a formula field that copies value from RecordTypeId (field API Name). This was created because of a Salesforce Maps limitation that did not allow RecordTypeId field to be used in ETM Rules in Territory Planning (Salesforce Maps) module. Refer to TASK0951428</description>
    <formula>RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replicates data from RecordTypeId. For Territory Planning use.</inlineHelpText>
    <label>ETM Record Type Id</label>
    <type>Text</type>
</CustomField>