force-app/main/default/objects/Account/fields/ETM_State__c.field-meta.xml
<CustomField>
    <fullName>ETM_State__c</fullName>
    <description>This is a formula field that copies value from BillingState (field API Name). This was created because of a Salesforce Maps limitation that did not allow BillingState field to be used in ETM Rules in Territory Planning (Salesforce Maps) module. Refer to TASK0951428</description>
    <formula>BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replicates data from BillingState. For Territory Planning use.</inlineHelpText>
    <label>ETM State</label>
    <type>Text</type>
</CustomField>