force-app/main/default/objects/Account/fields/Field_Support_IDs__c.field-meta.xml
<CustomField>
    <fullName>Field_Support_IDs__c</fullName>
    <description>Stores unique IDs from the User object for the Field Support User Roles on the Account To Field Support junction object in comma separated values. This is used to filter supported Accounts for Field Support Users of ServiceMax Mobile App.</description>
    <label>Field Support IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>