force-app/main/default/objects/Account/fields/For_Profit_Company__c.field-meta.xml
<CustomField>
    <fullName>For_Profit_Company__c</fullName>
    <description>Is the Company Profit Company(excludes governments, government agencies, hospitals, research institutes, academic institutions, non-profit)</description>
    <inlineHelpText>Is the company (or account) a for-profit laboratory (excluding government, government agencies, hospitals, research institutes, academic institutes, and non-profits), or kit manufacturer?</inlineHelpText>
    <label>For-Profit Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Categorical_Value</valueSetName>
    </valueSet>
</CustomField>