force-app/main/default/objects/Account/fields/Global_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Tier__c</fullName>
    <description>Answers the question of how ILMN is doing with our highest revenue accounts. For example top tier would be accounts providing top 50% of revenue globally. Jira Story # CMCM-4257</description>
    <inlineHelpText>Tier used for global teams to provide leadership with a global view of account data. Updates managed by global sales ops.</inlineHelpText>
    <label>Global Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Account_Tier</valueSetName>
    </valueSet>
</CustomField>