force-app/main/default/objects/Account/fields/Global_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Group_Name__c</fullName>
    <description>Account name of the Global Group Number account</description>
    <label>Global Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>