force-app/main/default/objects/Account/fields/Is_Account_Owner_or_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Owner_or_Manager__c</fullName>
    <description>Formula field used in report to check if the logged in user is Account owner or Manager of those Account Owners
PM-41</description>
    <formula>(Owner.ManagerId = $User.Id|| OwnerId = $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Account Owner or Manager?</label>
    <type>Checkbox</type>
</CustomField>