force-app/main/default/objects/Account/fields/Is_Converted_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_From_Lead__c</fullName>
    <description>mapped when converted from lead</description>
    <label>Is Converted From Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>