force-app/main/default/objects/Account/fields/Is_Updated_By_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>system managed flag to allow bypassing of validation rules</description>
    <label>Is Updated By System</label>
    <type>Checkbox</type>
</CustomField>