force-app/main/default/objects/Account/fields/Mark_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Mark_For_Deletion__c</fullName>
    <description>Field to indicate if the account is marked for deletion and make it obsolete</description>
    <defaultValue>false</defaultValue>
    <label>Mark For Deletion</label>
    <type>Checkbox</type>
</CustomField>