force-app/main/default/objects/Account/fields/MyILMN_Access_Change_Log__c.field-meta.xml
<CustomField>
    <fullName>MyILMN_Access_Change_Log__c</fullName>
    <description>Change log for entity-related user access to My Illumina dashboard</description>
    <inlineHelpText>Change log for entity-related user access to dashboard.</inlineHelpText>
    <label>MyILMN Access Change Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>