force-app/main/default/objects/Account/fields/National_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Group_Number__c</fullName>
    <description>As part of 7729, to capture national group number.</description>
    <label>National Group Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>