force-app/main/default/objects/Account/fields/Oncology_Lab_Manufacturer_Comparison__c.field-meta.xml
<CustomField>
        <fullName>Oncology_Lab_Manufacturer_Comparison__c</fullName>
        <description>Field will be driven by inputs from "For Profit Company" and "Clinical Oncology Screening/DX Testing" fields. Drives MFN Approval.</description>
        <inlineHelpText>Auto-populated field indicating a MFN comparison customer for use within MFN eligible countries. This field does not need to be selected manually.</inlineHelpText>
        <label>Oncology Lab/Manufacturer Comparison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Categorical_Value</valueSetName>
        </valueSet>
   </CustomField>