force-app/main/default/objects/Account/fields/Open_Offer_Comparison_Customer__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Comparison_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Open Offer Comparison Customer</description>
	<inlineHelpText>Customers whose discounting is relevant for internal comparison versus universal grid.</inlineHelpText>
    <label>Open Offer Comparison Customer</label>
    <type>Checkbox</type>
</CustomField>