force-app/main/default/objects/Account/fields/Partner_Request__c.field-meta.xml
<CustomField>
    <fullName>Partner_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounts will be created from Partner Request in Partner Community</description>
    <label>Partner Request</label>
    <referenceTo>Partner_Request__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>