force-app/main/default/objects/Account/fields/Population_Genomics__c.field-meta.xml
<CustomField>
    <fullName>Population_Genomics__c</fullName>
    <description>Boolean field to indicate if account is marked for population genomics</description>
    <label>Population Genomics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Population_Genomics</valueSetName>
    </valueSet>
</CustomField>