force-app/main/default/objects/Account/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Field to store Primary language in which entity transacts</description>
    <inlineHelpText>Primary language in which entity transacts; determines language output for quoting.</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Language</valueSetName>
    </valueSet>
</CustomField>