force-app/main/default/objects/Account/fields/Primary_Field_Service_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Field_Service_Engineer__c</fullName>
    <description>This field captures the name of the Primary FSE from the related Account to Field Support records. This field is used in Responsive (CQM) field mapping. Jira Story # CMCM-5763</description>
    <inlineHelpText>Primary FSE from the related Account to Field Support records</inlineHelpText>
    <label>Primary Field Service Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>