force-app/main/default/objects/Account/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Product group values from Product to be used instead of product family</description>
    <label>Product Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>AmpliSeq Library Prep</fullName>
            </value>
            <value>
                <fullName>Archer Targeted RNA</fullName>
            </value>
            <value>
                <fullName>Array-Based Analysis</fullName>
            </value>
            <value>
                <fullName>AutoLoader 2</fullName>
            </value>
            <value>
                <fullName>AutoLoader 2.x</fullName>
            </value>
            <value>
                <fullName>AutoLoader Accessories</fullName>
            </value>
            <value>
                <fullName>AutoLoader Service Contract</fullName>
            </value>
            <value>
                <fullName>BAR Service Contract</fullName>
            </value>
            <value>
                <fullName>BaseSpace Cloud Compute</fullName>
            </value>
            <value>
                <fullName>BaseSpace Cloud Storage</fullName>
            </value>
            <value>
                <fullName>Basespace Cloud Storage + Compute</fullName>
            </value>
            <value>
                <fullName>BaseSpace Cloud Subscriptions</fullName>
            </value>
            <value>
                <fullName>BaseSpace Cohort Analyzer</fullName>
            </value>
            <value>
                <fullName>BaseSpace Correlation Engine</fullName>
            </value>
            <value>
                <fullName>BaseSpace Onsite Accessory</fullName>
            </value>
            <value>
                <fullName>BaseSpace Onsite Qualifications</fullName>
            </value>
            <value>
                <fullName>BaseSpace Onsite Software</fullName>
            </value>
            <value>
                <fullName>BaseSpace Onsite System</fullName>
            </value>
            <value>
                <fullName>BaseSpace Onsite Upgrades</fullName>
            </value>
            <value>
                <fullName>BaseSpace Professional Service</fullName>
            </value>
            <value>
                <fullName>BeadXpress Service Contract</fullName>
            </value>
            <value>
                <fullName>Beadxpress System (220V)</fullName>
            </value>
            <value>
                <fullName>Billable Service</fullName>
            </value>
            <value>
                <fullName>Billable Service Sequencing</fullName>
            </value>
            <value>
                <fullName>BioRad System</fullName>
            </value>
            <value>
                <fullName>BlueGnome Accessory</fullName>
            </value>
            <value>
                <fullName>cBot Qualification</fullName>
            </value>
            <value>
                <fullName>cBot Service Contract</fullName>
            </value>
            <value>
                <fullName>cBot System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>