force-app/main/default/objects/Account/fields/Purchases_Products_Shipping_to_U_S__c.field-meta.xml
<CustomField>
    <fullName>Purchases_Products_Shipping_to_U_S__c</fullName>
    <description>Check if Account provide Shipping to US</description>
    <inlineHelpText>Does the company (or account) purchase or receive products shipped within OR to the US?</inlineHelpText>
    <label>Purchases Products Shipping to U.S.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Categorical_Value</valueSetName>
    </valueSet>
</CustomField>