force-app/main/default/objects/Account/fields/R_Q_Contact_Compliant__c.field-meta.xml
<CustomField>
        <fullName>R_Q_Contact_Compliant__c</fullName>
        <description>Automatically populated to indicate if an account has the requisite number of Regulatory/Quality Contacts flagged to receive product notifications. For accounts with two or more contacts, two contacts must be designated as Regulatory/Quality Contacts. For accounts with only one contact on the account, the single contact must be designated as Regulatory/Quality Contact.</description>
        <inlineHelpText>Indicates if the Account meets the minimum requirements for product notification contacts. If &apos;Non Compliant&apos;, Account Teams must review the Account and assign the appropriate Contacts.</inlineHelpText>
        <label>R/Q Contact Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non Compliant</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>