force-app/main/default/objects/Account/fields/R_Q_Contact_Eligible__c.field-meta.xml
<CustomField>
    <fullName>R_Q_Contact_Eligible__c</fullName>    
    <defaultValue>false</defaultValue>
    <description>Direct UC Accounts and Distributor Accounts with applicable Order Types are the only Accounts that need to maintain R/Q Contacts and this field will be marked as True for those Accounts. Any other Accounts will have this field marked as FALSE.</description>
    <label>R/Q Contact Eligible</label>
    <type>Checkbox</type>
</CustomField>