force-app/main/default/objects/Account/fields/Regulatory_Type__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Type__c</fullName>
    <description>Field to store regulatory codes</description>
    <label>Regulatory Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>DX</fullName>
            </value>
            <value>
                <fullName>DX_COMP</fullName>
            </value>
            <value>
                <fullName>DX_LOT_TRACKER</fullName>
            </value>
            <value>
                <fullName>DX_QC</fullName>
            </value>
            <value>
                <fullName>IUO</fullName>
            </value>
            <value>
                <fullName>IUO_COMP</fullName>
            </value>
            <value>
                <fullName>QC_COMP</fullName>
            </value>
            <value>
                <fullName>RUO</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SA_COMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>