force-app/main/default/objects/Account/fields/Sequencing_Liquid_Bx_Cancer_Screening__c.field-meta.xml
<CustomField>
    <fullName>Sequencing_Liquid_Bx_Cancer_Screening__c</fullName>
    <description>If Clinical Oncology Screening/Dx Testing is “Yes,” then, within clinical oncology, does the company perform liquid biopsy cancer screening or diagnostics test (on human samples received form, and delivered to, unaffiliated health care professions, health care organizations or other labs) on Illumina Instruments, or manufacture kits for such screening/testing?</description>
    <inlineHelpText>If Clinical Oncology Screening/Dx Testing is “Yes,” then, within clinical oncology, does the company perform liquid biopsy cancer screening or diagnostics test (on human samples received form, and delivered to, unaffiliated health care professions, health care organizations or other labs) on Illumina Instruments, or manufacture kits for such screening/testing?</inlineHelpText>
    <label>Sequencing: Liquid Bx Cancer Screening</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Clinical_Oncology_Screening_Dx_Testing__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>