force-app/main/default/objects/Account/fields/Signed_Open_Offer__c.field-meta.xml
<CustomField>
    <fullName>Signed_Open_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customers who have signed Grail open offer.</description>
	<inlineHelpText>Customers who have signed the open offer.</inlineHelpText>
    <label>Signed Open Offer</label>
    <type>Checkbox</type>
</CustomField>