force-app/main/default/objects/Account/fields/State_Province_Local__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Local__c</fullName>
    <description>Local Address State Province information as part of DCP-760</description>
    <inlineHelpText>Address state/province in local language.</inlineHelpText>
    <label>State/Province (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>