force-app/main/default/objects/Account/fields/SVMX_PS_Active__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Active__c</fullName>
    <description>Flag to determine active account</description>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>