force-app/main/default/objects/Account/fields/SVMX_PS_Contact__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Contact__c</fullName>
    <description>This field is lookup to contact</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>