force-app/main/default/objects/Account/fields/SVMX_PS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_External_ID__c</fullName>
    <description>Field to capture external Id</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>