force-app/main/default/objects/Account/fields/SVMX_PS_High_Value_Account__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_High_Value_Account__c</fullName>
    <description>Field to capture high value account</description>
    <label>High Value Account?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top 10 HVA</fullName>
            </value>
            <value>
                <fullName>Top 40 HVA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>