force-app/main/default/objects/Account/fields/SVMX_PS_Location__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Location__c</fullName>
    <description>This field is lookup to Location</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts_del</relationshipName>
    <type>Lookup</type>
</CustomField>