force-app/main/default/objects/Account/fields/SVMX_PS_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Tax_Code__c</fullName>
    <description>This field captures tax code on Account</description>
    <label>Tax Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>